# server/services/platform-server/openapi.json
@@ -2134,6 +2134,10 @@
             "title": "Interval Width Minutes",
             "type": "number"
           },
+          "is_dedicated": {
+            "title": "Is Dedicated",
+            "type": "boolean"
+          },
           "is_in_serving_sets": {
             "title": "Is In Serving Sets",
             "type": "boolean"
@@ -2167,6 +2171,7 @@
           "interval_width_minutes",
           "reliability",
           "is_in_serving_sets",
+          "is_dedicated",
           "trained_at"
         ],
         "title": "PredictOut",
